<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>me.lanzhi</groupId>
    <artifactId>BluestarGame</artifactId>
    <version>3.4.0</version>
    <packaging>jar</packaging>

    <name>BluestarGame</name>

    <properties>
        <java.version>17</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <repositories>
        <repository>
            <id>spigotmc-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
        </repository>
        <repository>
            <id>codemc-repo</id>
            <url>https://repo.codemc.org/repository/maven-public/</url>
            <layout>default</layout>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
        <repository>
            <id>dmulloy2-repo</id>
            <url>https://repo.dmulloy2.net/repository/public/</url>
        </repository>
    </repositories>

    <dependencies>
        <!--
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.19.1-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        -->
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>1.19-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-api</artifactId>
            <version>4.11.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.lanzhi6</groupId>
            <artifactId>BluestarAPI</artifactId>
            <version>3.0.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.lanzhi6</groupId>
            <artifactId>BluestarQQ</artifactId>
            <version>1.1.3</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.lanzhi6</groupId>
            <artifactId>BluestarGameAPI</artifactId>
            <version>3.4.3</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.11.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.github.dreamvoid</groupId>
            <artifactId>MiraiMC-Integration</artifactId>
            <version>1.7</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.MilkBowl</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>1.7.1</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/Vault.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.purpur</groupId>
            <artifactId>purpur9</artifactId>
            <version>1.19</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/purpur-1.19.jar</systemPath>
        </dependency>
        <!--
        <dependency>
            <groupId>org.purpur</groupId>
            <artifactId>purpur8</artifactId>
            <version>1.18</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/purpur-1.18.2.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.purpur</groupId>
            <artifactId>citizens</artifactId>
            <version>1.18.2</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/PlayerPoints-3.2.4.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.github.lanzhi6</groupId>
            <artifactId>BluestarTpsControl</artifactId>
            <version>1.5</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/GMusic.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.github.lanzhi6</groupId>
            <artifactId>BlggguestaasdrTpsControl</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/spigot-1.18.2-R0.1-SNAPSHOT.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.github.lanzhi6</groupId>
            <artifactId>asdasdasdasdasd</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/EssentialsX-2.19.4.jar</systemPath>
        </dependency>
        -->
    </dependencies>
</project>